[package]
name = "rusty-wheels"
version = "0.1.0"
authors = ["Ben Clifford <benc@hawaga.org.uk>"]
edition = "2021"

[dependencies]
lazy_static = "1.4.0"
spidev = {git = "https://github.com/rust-embedded/rust-spidev"}
rand = "0.7.3"
palette = "0.5.0"
sysfs_gpio = { path = "../rust-sysfs-gpio" }
signal-hook = "0.1.16"
bdf = "0.6.0"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "write_leds_spi_benchmark"
harness = false
